<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokapifragments.PokApiInformationFragment">

    <TextView
        android:id="@+id/authors"
        android:layout_width="80dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/authors"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authors_text" />

    <TextView
        android:id="@+id/external_libraries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/external_libraries"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <TextView
        android:id="@+id/data_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/data_url"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_libraries_text" />

    <TextView
        android:id="@+id/authors_text"
        android:layout_width="152dp"
        android:layout_height="87dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/application_made_with_love"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authors" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="343dp"
        android:layout_height="86dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/android_app_description"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/external_libraries_text"
        android:layout_width="170dp"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/external_libraries_description"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_libraries" />

    <TextView
        android:id="@+id/data_url_text"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/data_opendatasoft"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_url" />

    <ImageView
        android:id="@+id/ronflex"
        android:layout_width="152dp"
        android:layout_height="162dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/ronflex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <ImageView
        android:id="@+id/pikachu"
        android:layout_width="177dp"
        android:layout_height="176dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/pikachu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>